--- a/LeaveMessage/MessageManage_J/web/WEB-INF/web.xml
+++ b/LeaveMessage/MessageManage_J/web/WEB-INF/web.xml
@@ -7,20 +7,51 @@
     <servlet>
         <description>This is the description of my J2EE component</description>
         <display-name>This is the display name of my J2EE component</display-name>
+        <servlet-name>test</servlet-name>
+        <servlet-class>MM.Load</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/Load</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <description>This is the description of my J2EE component</description>
+        <display-name>This is the display name of my J2EE component</display-name>
         <servlet-name>test2</servlet-name>
-        <servlet-class>MMServlet.userInfo</servlet-class>
+        <servlet-class>MM.LoginServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>test2</servlet-name>
-        <url-pattern>/storage</url-pattern>
+        <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
 
 
+    <servlet>
+        <description>This is the description of my J2EE component</description>
+        <display-name>This is the display name of my J2EE component</display-name>
+        <servlet-name>test3</servlet-name>
+        <servlet-class>MM.STest</servlet-class>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>test3</servlet-name>
+        <url-pattern>/STest</url-pattern>
+    </servlet-mapping>
 
+    <servlet>
+        <description>This is the description of my J2EE component</description>
+        <display-name>This is the display name of my J2EE component</display-name>
+        <servlet-name>test4</servlet-name>
+        <servlet-class>MM.TryTest</servlet-class>
+    </servlet>
 
-
+    <servlet-mapping>
+        <servlet-name>test4</servlet-name>
+        <url-pattern>/TryTest</url-pattern>
+    </servlet-mapping>
 
 
 
